syntax = "proto3";

package mission.v1;

option go_package = "github.com/saltmurai/drone-api-service/missionv1";

service MissionService {
	rpc SendMission (SendMissionRequest) returns (SendMissionResponse) {}
}

enum Termination {
	TERMINATION_UNSPECIFIED = 0;
	TERMINATION_AUTO = 1;
	TERMINATION_STD = 2;
}

enum Action {
	ACTION_UNSPECIFIED = 0;
	ACTION_TAKEOFF = 1;
	ACTION_DISARM = 2;
	ACTION_SELFCHECK = 3;
	ACTION_RELEASE = 4;
	ACTION_RTLHOME = 5;
	ACTION_HOLD = 6;
	ACTION_AUTOLAND = 7; 
}

enum Planner {
	PLANNER_UNSPECIFIED = 0;
	PLANNER_EGO = 1;
	PLANNER_FAST = 2;
	PLANNER_MARKER = 3;
	PLANNER_SAFELAND = 4;
}

enum Controller {
	CONTROLLER_UNSPECIFIED = 0;
	CONTROLLER_PX4_VELO_FB = 1;
	CONTROLLER_A_FB = 2;
	CONTROLLER_A_FW = 3;
	CONTROLLER_A_ADRJ = 4;
}

message vector3 {
	repeated double vector = 1;
}

message InitInstruction {
  repeated int32 peripheral = 1;
	repeated double home = 2;
  Controller controller = 3;
  Termination terminate = 4;
}

message TravelInstruction {
	Planner planner = 1;
	repeated vector3 waypoint = 2;
	repeated vector3 constraint = 3;
	Termination terminate = 4;

}

message ActionInstruction {
  Action action = 1;
  repeated int32 package = 2;
	double param = 3;
}

message SequenceItem {
  oneof sequence {
    InitInstruction init_sequence = 1;
    ActionInstruction action_sequence = 2;
    TravelInstruction travel_sequence = 3;
  }
}


message SendMissionRequest {
	repeated SequenceItem sequence_items = 2;

}

message SingleInstruction {
	SequenceItem sequence_item = 1;
}

message SendMissionResponse {
  bool success = 1;
	string message = 2;
  string error_message = 3;
}